refactor: add OTP for forgot password request